[gd_scene load_steps=17 format=2]

[ext_resource path="res://scr/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Russo_One.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu_buttons.tres" type="StyleBox" id=3]
[ext_resource path="res://scr/Lobby.gd" type="Script" id=4]
[ext_resource path="res://fonts/NixieOne.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://icons/back.png" type="Texture" id=6]

[sub_resource type="Theme" id=13]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 5 )

[sub_resource type="ButtonGroup" id=14]
resource_name = "RadioButtons"

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 1024.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -1.0
margin_right = 1024.0
margin_bottom = 599.0
color = Color( 0.909804, 0.670588, 0.435294, 1 )

[node name="BackPanel" type="Button" parent="ColorRect"]
visible = false
margin_right = 100.0
margin_bottom = 40.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 13 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )

[node name="BackToMenu" type="TextureRect" parent="ColorRect/BackPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 120.0
margin_bottom = 121.0
grow_vertical = 2
rect_scale = Vector2( 0.3, 0.3 )
hint_tooltip = "Back to Menu"
texture = ExtResource( 6 )

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 292.0
margin_top = 205.0
margin_right = 692.0
margin_bottom = 355.0

[node name="Local" type="Button" parent="Menu/VBoxContainer"]
margin_right = 400.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Start local game"

[node name="Host" type="Button" parent="Menu/VBoxContainer"]
margin_top = 33.0
margin_right = 400.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Host networked game"

[node name="Join" type="Button" parent="Menu/VBoxContainer"]
margin_top = 66.0
margin_right = 400.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Join hosted game"

[node name="Options" type="Button" parent="Menu/VBoxContainer"]
margin_top = 99.0
margin_right = 400.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Options"

[node name="LobbyPanel" type="Panel" parent="Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 382.0
margin_top = 348.0
margin_right = 602.0
margin_bottom = 432.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 3 )

[node name="AddressLabel" type="Label" parent="Menu/LobbyPanel"]
margin_left = 10.0
margin_top = 5.0
margin_right = 160.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
text = "Enter host address"

[node name="Address" type="LineEdit" parent="Menu/LobbyPanel"]
margin_left = 10.0
margin_top = 27.0
margin_right = 210.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 6 )
text = "127.0.0.1"

[node name="OkButton" type="Button" parent="Menu/LobbyPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 18.0
margin_right = -9.0
margin_bottom = 38.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Ok"

[node name="TextPanel" type="Panel" parent="Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 382.0
margin_top = 443.0
margin_right = 602.0
margin_bottom = 466.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 3 )

[node name="StatusOk" type="Label" parent="Menu/TextPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -9.5
margin_right = 100.0
margin_bottom = 9.5
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 1, 0.015625, 1 )
custom_fonts/font = SubResource( 2 )
align = 1

[node name="StatusFail" type="Label" parent="Menu/TextPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -9.5
margin_right = 100.0
margin_bottom = 9.5
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1

[node name="PortForward" type="Label" parent="Menu"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 334.5
margin_top = 461.0
margin_right = 649.5
margin_bottom = 530.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 4 )
text = "If you want non-LAN clients to connect,
make sure the port 8910 in UDP
is forwarded on your router."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -225.0
margin_right = 250.0
margin_bottom = 225.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 3 )

[node name="VariantsLabel" type="Label" parent="Options"]
margin_left = 25.0
margin_top = 25.0
margin_right = 375.0
margin_bottom = 132.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = SubResource( 16 )
text = "Choose what variant of hexagonal chess you'd prefer to play.

This setting apply on games you play locally and games you host."
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
margin_top = 150.0
margin_right = 350.0
margin_bottom = 230.0

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
margin_right = 350.0
margin_bottom = 24.0

[node name="Glinski" type="CheckBox" parent="Options/VBoxContainer/HBoxContainer" groups=["chess_types"]]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 14 )

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 2.0
margin_right = 145.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 15 )
text = "Glinski variant"

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/VBoxContainer"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 52.0

[node name="McCooey" type="CheckBox" parent="Options/VBoxContainer/HBoxContainer2" groups=["chess_types"]]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 14 )

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 2.0
margin_right = 163.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 15 )
text = "McCooey variant"

[node name="HBoxContainer3" type="HBoxContainer" parent="Options/VBoxContainer"]
margin_top = 56.0
margin_right = 350.0
margin_bottom = 80.0

[node name="Hexofen" type="CheckBox" parent="Options/VBoxContainer/HBoxContainer3" groups=["chess_types"]]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 14 )

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer3"]
margin_left = 28.0
margin_top = 2.0
margin_right = 262.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 15 )
text = "Hexofen (Trubitsyn variant)"

[connection signal="pressed" from="ColorRect/BackPanel" to="." method="_on_BackPanel_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Local" to="." method="_on_Local_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Host" to="Menu" method="_on_Host_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Join" to="Menu" method="_on_Join_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="text_entered" from="Menu/LobbyPanel/Address" to="Menu" method="_on_Address_text_entered"]
[connection signal="pressed" from="Menu/LobbyPanel/OkButton" to="Menu" method="_on_OkButton_pressed"]
